fixing welcome text overflow

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ canvas {
     position: absolute;
     width: 100vh;
     height: 100vh;
+    overflow: hidden;
 }
 
 .navigation .buttonContainer .topButton {
